# LegacyDB-Doctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  START_HERE_WINDOWS.md  pyproject.toml  requirements.txt  requirements.txt~
docs/: access_mysql_mapping.md  migration_checklist.md  release_checklist.md
examples/: sample_config.yml
examples/demo_library/: CREATE_DEMO_DATABASE.md  README.md  create_demo_access_db.py  demo_data_plan.md
legacydb_doctor/: __init__.py  access_reader.py  cli.py  convertability.py  csv_exporter.py  csv_validator.py  duplicate_detector.py  fk_suggestions_writer.py  html_report_writer.py  json_writer.py  migration_checklist.py  models.py  mysql_import_writer.py  mysql_mapper.py  readiness_score.py  report_writer.py  sql_writer.py  summary_builder.py
tests/: test_access_reader_candidate_like_duplicates.py  test_cli.py  test_csv_exporter.py  test_csv_validator.py  test_fk_suggestions_writer.py  test_html_report_writer.py  test_identifier_suggestions.py  test_json_writer.py  test_mysql_import_writer.py  test_mysql_mapper.py  test_relationship_detection.py  test_report_writer_relationships.py  test_sql_writer.py  test_summary_builder.py
